<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">android-viewbadger demo</string>
    <string name="ok">OK</string>
    <string name="defined_in_xml_layout">Defined in XML layout</string>
    <string name="linearlayout_container">LinearLayout Container</string>
    <string name="relativelayout_container">RelativeLayout Container</string>
    <string name="todo">TODO</string>
    <string name="framelayout_container">FrameLayout Container</string>
    <string name="tablelayout_container">TableLayout Container</string>
    <string name="linearlayout_target">LinearLayout Target</string>
    <string name="relativelayout_target">RelativeLayout Target</string>
    <string name="framelayout_target">FrameLayout Target</string>
    <string name="tablerow_target">TableRow Target</string>
</resources>
